# rust-actor-model-practice

./: .gitignore  Cargo.toml  README.md  docker-compose-ci.yml  docker-compose-dynamodb.yml  docker-compose.yml
.github/workflows/: lint.yml  test.yml
domain/: Cargo.toml
dynamodb-client/: Cargo.toml  Makefile.toml
dynamodb-client/src/: client.rs  query.rs
dynamodb-client/src/query/: create_table.rs  delete_table.rs  dynamodb_query.rs  get_item.rs  list_tables.rs  put_item.rs
migrator/: .env.ci  .env.example  Cargo.toml  README.md
migrator/config/: Default.toml  ci.toml  default.toml  develop.toml
migrator/migrations/: 20221021_add_table.down.sh  20221021_add_table.up.sh  202302142330_add_message_table.create_table.json  202302150229_add_test_table.create_table.json  202302150230_delete_test_table.delete_table.json
migrator/src/: clients.rs  command.rs  commands.rs  executor.rs  extractor.rs  file.rs  lexer.rs  main.rs  parser.rs  settings.rs
migrator/src/clients/: client.rs  dynamodb_client.rs  dynamodb_client_factory.rs
migrator/src/command/: list.rs  migrate.rs  migrate_operation_type.rs  migrate_type.rs  migration_query.rs  query.rs  reset.rs
migrator/src/command/query/: create_table.rs  delete_table.rs  dynamodb_query.rs  put_item.rs
migrator/src/commands/: command.rs  list.rs  migrate.rs  migration_query.rs  migrator_command.rs
migrator/src/config/: aws_config.rs
migrator/src/extractor/: argument_extractor.rs  option_detector.rs  option_extractor.rs
migrator/src/lexer/: option_lexer.rs
migrator/src/lexers/: option_lexer.rs
migrator/src/resource/: migrations.json
read-http-api/: Cargo.toml
read-model-updater/: Cargo.toml  README.md  role-policy.json
read-model-updater/src/: consumer.rs  main.rs  message_dto.rs  message_repository_impl.rs
read-model-updater/tests/fixtures/: example-dynamodb-event.json
src/: main.rs
write-grpc/: Cargo.toml  README.md  build.rs
write-grpc/proto/: message.proto
write-grpc/proto/channel/: channel.proto
write-grpc/proto/message/: message.proto
write-grpc/src/: main.rs  usecase.rs
write-grpc/src/adapter/: controllers.rs
write-grpc/src/adapter/controllers/: add_message_controller.rs
write-grpc/src/proto/: Channel.proto
write-grpc/src/usecase/: add_message.rs
(+14 files in other folders)
