[package]
name = "dynamodb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "0.21.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
http = "0.2"
chrono = "0.4.23"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1.3.0"
