[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
http = "0.2"
termcolor = "1.1"
clap = { version = "4.1.1", features = ["derive"] }
tokio-stream = "0.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
config = "0.13.3"
strum = "0.24"
strum_macros = "0.24"
