[package]
name = "read-model-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb-client = { path = "../dynamodb-client" }

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
signal-hook = "0.3.15"
